[package]
name = "unity-yaml-rust"
version = "0.1.0" # remember to update html_root_url
authors = ["XMXu <xxm0211@gmail.com>"]
documentation = "https://docs.rs/unity-yaml-rust"
license = "MIT/Apache-2.0"
description = "Unity YAML parser"
repository = "https://github.com/xmxu/unity-yaml-rust"
readme = "README.md"
edition = "2021"

[dependencies]
linked-hash-map = "0.5.4"

[dev-dependencies]
quickcheck = "1"
